--- a/src/main/resources/co/edu/uniquindio/icaja/login.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/login.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXPasswordField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -31,8 +31,8 @@
                         <RowConstraints maxHeight="72.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="70.0" minHeight="0.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="80.0" minHeight="0.0" prefHeight="40.0" vgrow="SOMETIMES" />
                       <RowConstraints maxHeight="52.0" minHeight="1.0" prefHeight="36.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="111.0" minHeight="10.0" prefHeight="76.0" vgrow="SOMETIMES" />
                     </rowConstraints>
@@ -52,8 +52,7 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <PasswordField fx:id="txtClaveUsuario" GridPane.rowIndex="6" />
-                        <TextField fx:id="txtCedulaUsuario" promptText="1200XXXXXX" GridPane.rowIndex="3" />
+                        <TextField fx:id="txtCedulaUsuario" prefHeight="20.0" promptText="1200XXXXXX" GridPane.rowIndex="3" />
                         <VBox prefHeight="107.0" prefWidth="450.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="9" GridPane.valignment="CENTER">
                            <children>
                               <GridPane>
@@ -74,6 +73,7 @@
                               </GridPane>
                            </children>
                         </VBox>
+                        <MFXPasswordField fx:id="txtClaveUsuario" prefHeight="20.0" prefWidth="542.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
                </children>
