--- a/src/main/resources/co/edu/uniquindio/icaja/templates/mainAdmin.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/mainAdmin.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXComboBox?>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -7,6 +10,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -16,7 +20,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.mainAdminView">
     <children>
-      <AnchorPane fx:id="panelUsuario" layoutX="168.0" layoutY="54.0" prefHeight="615.0" prefWidth="1058.0">
+      <AnchorPane fx:id="panelUsuario" layoutX="168.0" layoutY="54.0" prefHeight="615.0" prefWidth="1058.0" visible="false">
          <children>
               <SplitPane dividerPositions="0.5474683544303798" orientation="VERTICAL" prefHeight="615.0" prefWidth="1058.0">
                   <items>
@@ -224,6 +228,12 @@
                                     <Font size="18.0" />
                                  </font>
                               </Button>
+                              <MFXComboBox floatMode="BORDER" prefHeight="13.0" prefWidth="165.0" GridPane.columnIndex="4" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                              <Label prefHeight="18.0" prefWidth="114.0" text="Propietario:" GridPane.columnIndex="4" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
                            </children>
                         </GridPane>
                      </children>
@@ -237,6 +247,168 @@
                               <TableColumn prefWidth="224.0" style="-fx-background-radius: 10;" text="Saldo" />
                               <TableColumn prefWidth="215.20001220703125" style="-fx-background-radius: 10;" text="Límite" />
                               <TableColumn prefWidth="250.66656494140625" style="-fx-background-radius: 10;" text="Tipo Cuenta" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+              </items>
+            </SplitPane>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="transaccionLabel" layoutX="168.0" layoutY="54.0" prefHeight="615.0" prefWidth="1058.0" visible="false">
+         <children>
+            <SplitPane dividerPositions="0.5" layoutY="-2.0" orientation="VERTICAL" prefHeight="615.0" prefWidth="1058.0">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="135.0" prefWidth="158.0">
+                     <children>
+                        <GridPane layoutX="27.0" layoutY="7.0" prefHeight="279.0" prefWidth="1003.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints maxHeight="59.59999313354492" minHeight="10.0" prefHeight="47.06666107177735" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="81.99999084472657" minHeight="10.0" prefHeight="44.133338928222656" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="96.33330383300782" minHeight="10.0" prefHeight="40.00001525878905" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="108.4" minHeight="10.0" prefHeight="63.59998168945313" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="91.60002746582029" minHeight="10.0" prefHeight="78.80002441406248" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <MFXTextField floatMode="DISABLED" prefHeight="32.0" prefWidth="201.0" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                              <MFXTextField floatMode="DISABLED" prefHeight="32.0" prefWidth="201.0" GridPane.columnIndex="2" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                              <MFXTextField floatMode="DISABLED" prefHeight="32.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                              <MFXTextField floatMode="DISABLED" prefHeight="34.0" prefWidth="197.0" GridPane.columnIndex="4" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                              <Label text="Id:" GridPane.valignment="BOTTOM">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Tipo:" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Fecha:" GridPane.columnIndex="2" GridPane.valignment="BOTTOM">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Monto:" GridPane.columnIndex="4" GridPane.valignment="BOTTOM">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Motivo:" GridPane.columnIndex="4" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Cuenta:" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <MFXComboBox floatMode="BORDER" prefHeight="34.0" prefWidth="184.0" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                              <MFXComboBox floatMode="BORDER" prefHeight="34.0" prefWidth="187.0" GridPane.columnIndex="2" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                              <MFXButton buttonType="RAISED" depthLevel="LEVEL1" prefHeight="40.0" prefWidth="115.0" text="Crear" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </MFXButton>
+                              <MFXButton buttonType="RAISED" depthLevel="LEVEL1" prefHeight="40.0" prefWidth="115.0" text="Eliminar" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </MFXButton>
+                              <MFXButton buttonType="RAISED" depthLevel="LEVEL1" prefHeight="40.0" prefWidth="115.0" text="Consultar" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </MFXButton>
+                           </children>
+                        </GridPane>
+                     </children></AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <TableView layoutX="-1.0" layoutY="2.0" prefHeight="303.0" prefWidth="1058.0">
+                          <columns>
+                            <TableColumn prefWidth="185.06664735078812" text="ID" />
+                            <TableColumn prefWidth="153.5999298095703" text="Fecha" />
+                              <TableColumn prefWidth="170.66665649414062" text="Monto" />
+                              <TableColumn prefWidth="410.933349609375" text="Motivo" />
+                              <TableColumn prefWidth="141.06674194335938" text="Categoria" />
+                          </columns>
+                        </TableView>
+                     </children></AnchorPane>
+              </items>
+            </SplitPane>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="categorialLabel" layoutX="168.0" layoutY="54.0" prefHeight="615.0" prefWidth="1058.0">
+         <children>
+            <SplitPane dividerPositions="0.5" layoutX="2.0" layoutY="-1.0" orientation="VERTICAL" prefHeight="615.0" prefWidth="1058.0">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <GridPane layoutX="33.0" layoutY="15.0" prefHeight="230.0" prefWidth="631.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.40000915527344" minWidth="10.0" prefWidth="279.40000915527344" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="349.8666015625" minWidth="10.0" prefWidth="268.799951171875" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="105.1333251953125" minHeight="10.0" prefHeight="105.1333251953125" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="43.99997558593749" minHeight="10.0" prefHeight="19.4666748046875" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Label text="Nombre:" GridPane.valignment="BOTTOM">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Tipo Categoría" GridPane.rowIndex="2" GridPane.valignment="TOP">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Descripción:" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <MFXTextField floatMode="ABOVE" prefHeight="35.0" prefWidth="210.0" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                              <MFXTextField floatMode="ABOVE" prefHeight="35.0" prefWidth="207.0" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                              <TextArea prefHeight="106.0" prefWidth="235.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                           </children>
+                        </GridPane>
+                        <MFXButton layoutX="501.0" layoutY="250.0" text="Crear">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </MFXButton>
+                        <MFXButton layoutX="708.0" layoutY="250.0" text="Consultar">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </MFXButton>
+                        <MFXButton layoutX="915.0" layoutY="250.0" text="Eliminar">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </MFXButton>
+                     </children>
+                  </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <TableView layoutX="-2.0" layoutY="2.0" prefHeight="306.0" prefWidth="1059.0">
+                          <columns>
+                            <TableColumn prefWidth="209.06673884391785" text="Nombre" />
+                            <TableColumn prefWidth="254.93324279785156" text="Tipo" />
+                              <TableColumn prefWidth="596.2667541503906" text="Descripción" />
                           </columns>
                         </TableView>
                      </children>
