--- a/src/main/resources/co/edu/uniquindio/icaja/templates/mainAdmin.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/mainAdmin.fxml
@@ -18,9 +18,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.mainAdminView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.mainAdminView">
     <children>
-      <AnchorPane fx:id="panelUsuario" layoutX="168.0" layoutY="54.0" prefHeight="615.0" prefWidth="1058.0" visible="false">
+      <AnchorPane fx:id="panelUsuario" layoutX="168.0" layoutY="54.0" prefHeight="615.0" prefWidth="1058.0">
          <children>
               <SplitPane dividerPositions="0.5474683544303798" orientation="VERTICAL" prefHeight="615.0" prefWidth="1058.0">
                   <items>
@@ -347,7 +347,7 @@
             </SplitPane>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="categorialLabel" layoutX="168.0" layoutY="54.0" prefHeight="615.0" prefWidth="1058.0">
+      <AnchorPane fx:id="categorialLabel" layoutX="168.0" layoutY="54.0" prefHeight="615.0" prefWidth="1058.0" visible="false">
          <children>
             <SplitPane dividerPositions="0.5" layoutX="2.0" layoutY="-1.0" orientation="VERTICAL" prefHeight="615.0" prefWidth="1058.0">
               <items>
