--- a/src/main/resources/co/edu/uniquindio/icaja/templates/baseAdmin.fxml
+++ b/src/main/resources/co/edu/uniquindio/icaja/templates/baseAdmin.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.baseAdminView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.icaja.view.views.baseAdminView">
     <children>
-      <GridPane layoutX="39.0" layoutY="53.0" prefHeight="617.0" prefWidth="100.0" style="-fx-background-color: indigo; -fx-background-radius: 10;">
+      <GridPane layoutX="45.0" layoutY="93.0" prefHeight="535.0" prefWidth="70.0">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -20,12 +20,24 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" onAction="#ponerUsuarioAction" prefHeight="69.0" prefWidth="78.0" style="-fx-background-radius: 50;" text="Usuario" />
-            <Button mnemonicParsing="false" onAction="#ponerCuentaAction" prefHeight="69.0" prefWidth="78.0" style="-fx-background-radius: 50;" text="Cuenta" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" onAction="#ponerTransaccionAction" prefHeight="69.0" prefWidth="78.0" style="-fx-background-radius: 50;" text="Transacción" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" onAction="#ponerCategoriaAction" prefHeight="69.0" prefWidth="78.0" style="-fx-background-radius: 50;" text="Categoria" GridPane.rowIndex="3" />
-            <Button mnemonicParsing="false" onAction="#VolverAction" prefHeight="69.0" prefWidth="78.0" style="-fx-background-radius: 50;" text="Back" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+            <Button mnemonicParsing="false" onAction="#irUsuarioAction" prefHeight="43.0" prefWidth="43.0" text="Usuario" />
+            <Button mnemonicParsing="false" onAction="#irCuentaAction" prefHeight="43.0" prefWidth="43.0" text="Cuenta" GridPane.rowIndex="1" />
+            <Button mnemonicParsing="false" onAction="#irTransaccionAction" prefHeight="43.0" prefWidth="43.0" text="Transacción" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" onAction="#irCategoriaAction" prefHeight="43.0" prefWidth="43.0" text="Categoria" GridPane.rowIndex="3" />
+            <Button mnemonicParsing="false" onAction="#VolverAction" prefHeight="43.0" prefWidth="43.0" text="Back" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
          </children>
       </GridPane>
+        <AnchorPane fx:id="usuarioBox" layoutX="162.0" layoutY="47.0" prefHeight="626.0" prefWidth="1073.0">
+                <fx:include source="admin/usuario.fxml" />
+        </AnchorPane>
+        <AnchorPane fx:id="cuentaBancariaBox" layoutX="162.0" layoutY="47.0" prefHeight="626.0" prefWidth="1073.0" visible="false">
+                <fx:include source="admin/cuenta.fxml" />
+        </AnchorPane>
+        <AnchorPane fx:id="transaccionBox" layoutX="162.0" layoutY="47.0" prefHeight="626.0" prefWidth="1073.0" visible="false">
+                <fx:include source="admin/transaccion.fxml" />
+        </AnchorPane>
+        <AnchorPane fx:id="categoriaBox" layoutX="162.0" layoutY="47.0" prefHeight="626.0" prefWidth="1073.0" visible="false">
+                <fx:include source="admin/categoria.fxml" />
+        </AnchorPane>
     </children>
 </AnchorPane>
